Firmas (firmantes) - ajustar ancho y disposicion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4639,6 +4639,7 @@ publicidad.declaracion.firma.tipoiden=Tipo de Identificación
 publicidad.declaracion.firma.numide=No. Identificación
 publicidad.declaracion.firma.numtarjeta=No. tarjeta profesional
 publicidad.declaracion.firma.nombre=Nombre
+publicidad.declaracion.firma.soloFirmar=Solo firmar
 
 #publicidad secciones firmas
 vehiculos.declaracion.firma.titulo=Firmas
