Se agregan cambios para concesionarios

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31375,3 +31375,22 @@ acto.detalle.inicial.numexpe=Número de expediente
 prepararPago.error.0=La deuda por pagar es 0
 contribuyentes.Cancelar=Transacción cancelada, por favor ingresa al menú de Consultas - Obligaciones pendientes, para retornar el proceso de pago
 
+#Concesionarios
+text.account.profile.concesionario= Concesionarios
+concesionario.inicial.titulo= Concesionarios
+concesionario.inicial.fechas= Rango de fechas
+concesionario.inicial.fecInicio=Fecha Inicio
+concesionario.inicial.fecFin= Fecha Fin
+concesionario.inicial.statusReferencia= Estatus de Referencia
+concesionario.inicial.estatusReferencia = Estatus de la referencia
+concesionario.inicial.referencia= Referencia
+concesionario.inicial.placa Placa
+concesionario.inicial.modelo = Modelo
+concesionario.inicial.vigencia = Vigencia
+concesionario.inicial.vencimiento= Vencimiento
+concesionario.inicial.estatusdeReferencia = Estatus de referencia
+concesionario.inicial.seleccionar= Seleccionar
+concesionario.inicial.impresion=Impresión
+breadcrumb.concesionarios= Concesionarios
+
+
