Lista de declaraciones pendientes - Agregar status "03 - Firmado" y paginacion en la tabla

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5648,6 +5648,9 @@ contribuyente.listadeclaraciones.relacion=Relación
 contribuyente.listadeclaraciones.tipid=TipoID
 contribuyente.listadeclaraciones.numid=NumID
 contribuyente.listadeclaraciones.nombre=Nombre 
+contribuyente.listadeclaraciones.status.01=Pendiente por firmar
+contribuyente.listadeclaraciones.status.02=Pendiente por presentar
+contribuyente.listadeclaraciones.status.03=Firmado 
 
 
 vehiculos.detalle.blindado.=-
