Se agregan cambios para concesionarios

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31378,8 +31378,8 @@ contribuyentes.Cancelar=Transacción cancelada, por favor ingresa al menú de Co
 #Concesionarios
 text.account.profile.concesionario= Concesionarios
 concesionario.inicial.titulo= Concesionarios
-concesionario.inicial.fechas= Rango de fechas
-concesionario.inicial.fecInicio=Fecha Inicio
+concesionario.inicial.fechas= Consulta de Fecha
+concesionario.inicial.fecInicio=Fecha
 concesionario.inicial.fecFin= Fecha Fin
 concesionario.inicial.statusReferencia= Estatus de Referencia
 concesionario.inicial.estatusReferencia = Estatus de la referencia
@@ -31389,7 +31389,7 @@ concesionario.inicial.modelo = Modelo
 concesionario.inicial.vigencia = Vigencia
 concesionario.inicial.vencimiento= Vencimiento
 concesionario.inicial.estatusdeReferencia = Estatus de referencia
-concesionario.inicial.seleccionar= Seleccionar
+concesionario.inicial.valRef= Valor Referencia
 concesionario.inicial.impresion=Impresión
 breadcrumb.concesionarios= Concesionarios
 
