Ajustes para deplegar impuestos en la pagina Relacion de Pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3811,6 +3811,7 @@ relacion.inicial.delineacion.radicados.visualizar=Visualizar
 relacion.inicial.gasolina.titulo=Impuestos de Motores a Gasolina
 relacion.inicial.gasolina.tipdoc=Tipo de documento
 relacion.inicial.gasolina.numdoc=Número de documento
+relacion.inicial.gasolina.numObjeto=Número de objeto
 relacion.inicial.gasolina.visualizar=Visualizar
 relacion.inicial.gasolina.aniograv=Año gravable
 relacion.inicial.gasolina.periodo=Periodo
