Se agregan cambios para medios magneticos y footer

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3324,6 +3324,10 @@ representantes.info.inicial.predial= Medios Magnéticos Predial
 representantes.info.inicial.opain= Medios Magnéticos OPAIN
 representantes.info.inicial.vehicular= Medios Magnéticos Vehicular
 representantes.info.inicial.ica= Medios Magnéticos ICA
+representantes.info.inicial.resolucion=Resolución
+representantes.info.inicial.articulo=Artículo
+representantes.info.inicial.antes= Antes de realizar tu reporte, recomensamos verificar el anexo técnico y Resolución de acuerdo con el artículo correspondiente
+representantes.info.inicial.seleccionar= Selecciona el archivo
 
 representantes.info.predial.titulo= Carga de archivos Predial
 representantes.info.predial.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea
