Pagina de inicio de sesion - mensaje "Cuenta bloqueada porque se hicieron los tres intentos ..."

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2412,6 +2412,7 @@ login.not.a.robot.exception=Por favor valida que no eres un robot
 login.not.a.validEmail.exception=Escribe una dirección de correo electrónico válida
 login.user.disabled.exception= Cuenta no activa revisa tu correo y actívala
 login.user.not.exists=Correo no registrado, obtén tu contraseña
+login.user.bloqueadoIntentos=Cuenta bloqueada porque se hicieron los tres intentos, debe esperar 15 min para que se active.
 
 activate.account.error=Hubo un error al intentar activar la cuenta, por favor inténtalo nuevamente más tarde.
 activate.account.title=Activar Cuenta
