Ajuste para pagos en Concesionarios

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31411,6 +31411,7 @@ concesionario.inicial.vencimiento= Vencimiento
 concesionario.inicial.estatusdeReferencia = Estatus de referencia
 concesionario.inicial.valRef= Valor Referencia
 concesionario.inicial.impresion=Impresión
+concesionario.inicial.pagar=Pagar
 breadcrumb.concesionarios= Concesionarios
 
 
