Tercero autorizado - ajustes por observaciones en pruebas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4779,7 +4779,7 @@ terceros.menu.objeto=Por objeto
 
 terceros.sim.buscar.iddoc=Id de documento
 terceros.sim.buscar.buscar= Buscar
-terceros.sim.buscar.mensaje1=Puede ingresar la identificación del objeto o el ID que aparece en la parte superior derecha del reporte.
+terceros.sim.buscar.mensaje1=Puede ingresar la identificación del objeto o el ID que aparece en la parte superior izquierda del reporte.
 terceros.objeto.predial.titulo=Predial
 terceros.objeto.predial.chip=CHIP
 terceros.objeto.predial.matriculaInmobiliaria=Matricula Inmobiliaria
@@ -4824,6 +4824,8 @@ terceros.objeto.publicidad.estadoObligacion=Estado de obligación
 terceros.sim.buscar.numDocumento=Número de documento
 terceros.sim.buscar.iddoc=Id de documento
 terceros.sim.buscar.numeroObjeto=Número de objeto
+terceros.sim.buscar.lblCampo_subrol03_02=Ingresar chip o matrícula
+terceros.sim.buscar.lblCampo_subrol03_04=Ingresa placa del vehículo
 terceros.sim.buscar.buscar= Buscar
 
 terceros.notario.buscar.tipdoc=Tipo de documento
