Tercero autorizado - ajuste en mensaje para Notarias / Transferencia de Dominio en la opcion buscar por objeto

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4825,6 +4825,7 @@ terceros.sim.buscar.numDocumento=Número de documento
 terceros.sim.buscar.iddoc=Id de documento
 terceros.sim.buscar.numeroObjeto=Número de objeto
 terceros.sim.buscar.lblCampo_subrol03_02=Ingresar chip o matrícula
+terceros.sim.buscar.lblCampo_subrol03_03=Ingresar chip o matrícula
 terceros.sim.buscar.lblCampo_subrol03_04=Ingresa placa del vehículo
 terceros.sim.buscar.buscar= Buscar
 
