Ajustes a incidentes de consecionarios, relacion pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3774,6 +3774,7 @@ relacion.inicial.ica.aniograv=Año gravable
 relacion.inicial.ica.periodo=Periodo
 relacion.inicial.ica.numdoc=No. documento
 relacion.inicial.ica.tipdocu= Tipo de Documento
+relacion.inicial.ica.numObjeto=Número de objeto
 relacion.inicial.ica.visualizar=Visualizar
 relacion.inicial.ica.numrefrec= No. referencia recaudo
 relacion.inicial.ica.sticker= No. formulario
