--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5170,7 +5170,7 @@ autorizado.asignarse.resumen.addcalidad=Agregar otra calidad
 autorizado.asignarse.resumen.nota2=Se enviará a un Funcionario Facultado de la SDH para su revisión y autorización
 
 autorizado.impuestos.=-
-autorizado.impuestos.0001=Impuestos de Predial
+autorizado.impuestos.0001=Impuesto Predial
 autorizado.impuestos.0002=Impuestos de Vehículos
 autorizado.impuestos.0003=Impuestos de Industria y Comercio
 autorizado.impuestos.0004=Impuestos de Reteica
