Ajsutes en pagos sit 2 - mostrar errores

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -31397,6 +31397,7 @@ acto.detalle.inicial.numexpe=Número de expediente
 
 #Errores pagos SIT II
 prepararPago.error.0=La deuda por pagar es 0
+prepararPago.error.SIT2null=Por favor, intente realizar el pago de nuevo.
 contribuyentes.Cancelar=Transacción cancelada, por favor ingresa al menú de Consultas - Obligaciones pendientes, para retornar el proceso de pago
 
 #Concesionarios
