Impuestos disponibles y catalogos de año gravable (Mi rit, impuestos, facturacion, consultas)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3850,6 +3850,13 @@ relacion.inicial.publicidad.tipdoc=Tipo de documento
 relacion.inicial.publicidad.fecprese=Fecha de presentación
 relacion.inicial.publicidad.totpag=Total pagado
 
+relacion.inicial.impuestos.0001=Predial unificado
+relacion.inicial.impuestos.0002=Vehículos
+relacion.inicial.impuestos.0003=ICA
+relacion.inicial.impuestos.0004=Publicidad Exterior
+relacion.inicial.impuestos.0005=Sobretasa a la gasolina motor
+relacion.inicial.impuestos.0006=Delineación Urbana
+
 edocuenta.inicial.titulo= Estado de Cuenta
 edocuenta.inicial.descripcion=El Estado de cuenta es la vista...
 edocuenta.inicial.tipo= Tipo de certificación
