Vehiculos - Ajustes: 1. ya no se graba a db de commerce, se corrigio el nombre para NIT, actualizacion de catalogos, se agregaron los campos: descuentoconbustible y descuentoadicional

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4520,6 +4520,8 @@ sobre.vehiculo.declaracion.vehiculo.liq.proapovol=Programa del aporte voluntario
 sobre.vehiculo.declaracion.vehiculo.liq.sancion=Sanción
 sobre.vehiculo.declaracion.vehiculo.liq.intereses=Intereses
 sobre.vehiculo.declaracion.vehiculo.liq.valsemafo=Valor semaforización
+sobre.vehiculo.declaracion.vehiculo.liq.descuentoconbustible=Descuento por combustible
+sobre.vehiculo.declaracion.vehiculo.liq.descuentoadicional=Descuento adicional
 sobre.vehiculo.declaracion.vehiculo.liq.despronpag=Descuento por pronto pago
 sobre.vehiculo.declaracion.vehiculo.liq.totpag=Total a pagar
 sobre.vehiculo.declaracion.vehiculo.liq.valpagar=Valor a pagar
