Predial - modificacion de tabla pagar en Facturacion, ajuste en texto de predial inicial en impuestos, ajuste de etiqueta "matricula nmobiliaria" en certificacion de pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4012,7 +4012,7 @@ certideclara.inicial.cancelar= Cancelar
 certideclara.inicial.generar= Generar
 
 certideclara.inicial.predio.chip = CHIP
-certideclara.inicial.predio.matricula = Matrícula Inmobiliaría
+certideclara.inicial.predio.matricula = Matrícula Inmobiliaria
 certideclara.inicial.predio.direccion = Dirección del Predio
 certideclara.inicial.predio.seleccionar = Seleccionar
 
@@ -6470,7 +6470,7 @@ firmas.natural.nota2= Para continuar con el proceso de declaración debe selecci
 #se agregan etiquetas para pantalla inicial de predial
 
 predial.inicial.table.titulo= Impuesto de Predial
-predial.inicial.table.descripcion= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital. Más información La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predial.inicial.table.descripcion= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital. <a href=\"https://www.shd.gov.co/shd/predial\" >Más información</a> La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y la oficina de instrumentos públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predial.inicial.table.buscar=Buscar CHIP:
 predial.inicial.table.chip= CHIP
 predial.inicial.table.matinmo=Matricula inmobiliaria
