Relaciones de pago - Ajuste en etiqueta de columna "Total aporte voluntario"

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3753,7 +3753,7 @@ relacion.inicial.predio.norefrecaudo=No. referencia recaudo
 relacion.inicial.predio.sticker=No. formulario
 relacion.inicial.predio.fecpreseta=Fecha de presentación
 relacion.inicial.predio.totpagado=Total pagado
-relacion.inicial.predio.totaporte=Total con aporte voluntario
+relacion.inicial.predio.totaporte=Total aporte voluntario
 
 relacion.inicial.vehiculo.titulo=Vehículos
 relacion.inicial.vehiculo.placa= Placa
