Relacion de pagos vehicular - etiqueta decia "Total con aporte voluntario" ahora dice "Total aporte voluntario"

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3767,7 +3767,7 @@ relacion.inicial.vehiculo.numrefrec=No. referencia recaudo
 relacion.inicial.vehiculo.numform=No. formulario
 relacion.inicial.vehiculo.fecprese=Fecha de presentación
 relacion.inicial.vehiculo.totpag=Total Pagado
-relacion.inicial.vehiculo.totapovol=Total con aporte voluntario
+relacion.inicial.vehiculo.totapovol=Total aporte voluntario
 
 relacion.inicial.ica.titulo=ICA
 relacion.inicial.ica.aniograv=Año gravable
@@ -3780,7 +3780,7 @@ relacion.inicial.ica.numrefrec= No. referencia recaudo
 relacion.inicial.ica.sticker= No. formulario
 relacion.inicial.ica.fecprese=Fecha de presentación
 relacion.inicial.ica.totpag=Total pagado
-relacion.inicial.ica.totapovol=Total con aporte voluntario
+relacion.inicial.ica.totapovol=Total aporte voluntario
 
 relacion.inicial.reteica.titulo=RETEICA
 relacion.inicial.reteica.aniograv=Año gravable
