Predial declaracion - ajuste en mensaje de predial

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5248,7 +5248,7 @@ declaracion.inicial.titulo= Declaraciones
 
 predialuno.generales.titulo=Impuestos de Predial
 predialuno.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialuno.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialuno.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 
 predialuno.generales.titulodatos= Datos generales
 predialuno.generales.anigrav=Año gravable
@@ -5296,7 +5296,7 @@ predialuno.firma.spac=SPAC
 
 predialdos.generales.titulo=Impuestos de Predial
 predialdos.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialdos.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialdos.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialdos.generales.titulodatos= Datos generales
 predialdos.generales.anigrav=Año gravable
 predialdos.generales.opuso=Opción de uso
@@ -5339,7 +5339,7 @@ predialdos.firma.spac=SPAC
 
 predialtres.generales.titulo=Impuestos de Predial
 predialtres.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialtres.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialtres.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialtres.generales.titulodatos= Datos generales
 predialtres.generales.anigrav=Año gravable
 predialtres.generales.chip=CHIP
@@ -5388,7 +5388,7 @@ predialtres.firma.spac=SPAC
 
 predialcuatro.generales.titulo=Impuestos de Predial
 predialcuatro.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialcuatro.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialcuatro.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialcuatro.generales.titulodatos= Datos generales
 predialcuatro.generales.anigrav=Año gravable
 predialcuatro.generales.chip=CHIP
@@ -5439,7 +5439,7 @@ predialcuatro.firma.spac=SPAC
 
 predialcinco.generales.titulo=Impuestos de Predial
 predialcinco.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialcinco.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialcinco.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialcinco.generales.titulodatos= Datos generales
 predialcinco.generales.anigrav=Año gravable
 predialcinco.generales.chip=CHIP
@@ -5485,7 +5485,7 @@ predialcinco.firma.spac=SPAC
 
 predialseis.generales.titulo=Impuestos de Predial
 predialseis.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialseis.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialseis.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialseis.generales.titulodatos= Datos generales
 predialseis.generales.anigrav=Año gravable
 predialseis.generales.chip=CHIP
@@ -5528,7 +5528,7 @@ predialseis.firma.spac=SPAC
 
 predialsiete.generales.titulo=Impuestos de Predial
 predialsiete.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialsiete.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialsiete.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialsiete.generales.titulodatos= Datos generales
 predialsiete.generales.anigrav=Año gravable
 predialsiete.generales.chip=CHIP
@@ -5568,7 +5568,7 @@ predialsiete.firma.spac=SPAC
 
 predialocho.generales.titulo=Impuestos de Predial
 predialocho.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predialocho.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predialocho.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predialocho.generales.titulodatos= Datos generales
 predialocho.generales.anigrav=Año gravable
 predialocho.generales.chip=CHIP
@@ -5608,7 +5608,7 @@ predialocho.firma.spac=SPAC
 
 predial.basespresun.generales.titulo=Impuestos de Predial
 predial.basespresun.generales.descripcion1= El Impuesto Predial Unificado lo pagan todos los propietarios, poseedores o usufructuarios de bienes inmuebles que estén ubicados dentro del Distrito Capital.
-predial.basespresun.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital, de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
+predial.basespresun.generales.descripcion2= La información que se presenta a continuación proviene de la Unidad Administrativa Especial de Catastro Distrital y de la oficina de Instrumentos Públicos. Si encuentra alguna inconsistencia por favor verifique directamente con la entidad correspondiente.
 predial.basespresun.generales.titulodatos= Datos generales
 predial.basespresun.generales.anigrav=Año gravable
 predial.basespresun.generales.direccion=Dirección
