Predial (bases presuntivas) - Ajustes en cascada y visualizacion de campos, ahora se ven como en TRM

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5628,6 +5628,11 @@ predial.basespresun.datliquidacion.calidad=Calidad de sujeción
 predial.basespresun.datliquidacion.tarliqui=Tarifa liquidación
 predial.basespresun.datliquidacion.destino=Destino Hacendario
 predial.basespresun.datliquidacion.basegrav=Base gravable
+predial.basespresun.datospredio.baseGravableCalc=Base gravable calc.
+predial.basespresun.datospredio.confirmarBGF=Confirmar BG final
+predial.basespresun.datospredio.actividadEconomica=Actividad Económica
+predial.basespresun.datospredio.usoSuelo=Uso de suelo
+predial.basespresun.datospredio.tarifa=Tarifa
 
 predial.basespresun.liquidacionpriv.titulo=Liquidación privada
 predial.basespresun.liquidacionpriv.aporte=¿Desea realizar aporte voluntario
