Ajuste para mostrar Mis representantes en la pagina de Contribuyentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5676,6 +5676,13 @@ contribuyente.listadeclaraciones.nombre=Nombre
 contribuyente.listadeclaraciones.status.01=Pendiente por firmar
 contribuyente.listadeclaraciones.status.02=Pendiente por presentar
 contribuyente.listadeclaraciones.status.03=Firmado 
+contribuyente.listaRepresentantes.titulo=Mis Representantes
+contribuyente.listaRepresentantes.howRepresentsMe=Quién me representa
+contribuyente.listaRepresentantes.documentType=Tipo de documento
+contribuyente.listaRepresentantes.documentNumber=Número de documento
+contribuyente.listaRepresentantes.name=Nombre
+contribuyente.listaRepresentantes.as=En calidad de
+contribuyente.listaRepresentantes.refentTo=Relacionado con
 
 
 vehiculos.detalle.blindado.=-
