Vehiculos (liquidador) - ajuste para habilitar edicion de avaluo y mostrar mensaje de tablas base gravable

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4485,6 +4485,7 @@ conciliaciones.header.description=Desde el año 2008 y en el marco del plan estr
 sobre.vehiculo.declaracion.vehiculo.title=Declaración impuestos de vehículos
 sobre.vehiculo.declaracion.vehiculo.descripcion1=El impuesto sobre vehículos automotores grava la propiedad o posesión de los vehículos matriculados en Bogotá.
 sobre.vehiculo.declaracion.vehiculo.descripcion2=Los propietarios y poseedores lo deben declarar y pagar una vez al año. La información sobre las características que se presentan a continuación proviene de la Secretaría Distrital de Movilidad de Bogotá. Si encuentra alguna inconsistencia por favor verifique directamente con esta entidad, a través del Consorcio SIM.
+sobre.vehiculo.declaracion.vehiculo.descripcion3=Verifica la información a ingresar, en las tablas del Ministerio de Transporte: <a href="https://www.shd.gov.co/shd/sites/default/files/files/impuestos/2021/Avaluos_vigencia_2022.xlsx">Tablas base gravable para la vigencia 2022</a>
 sobre.vehiculo.declaracion.vehiculo.aniograv=Año gravable
 sobre.vehiculo.declaracion.vehiculo.placa=Placa
 sobre.vehiculo.declaracion.vehiculo.opuso=Opción de uso
