Se agrega cambio, para mensaje de ventanas emergentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6733,4 +6733,4 @@ concesionario.inicial.impresion=Impresión
 concesionario.inicial.pagar=Pagar
 breadcrumb.concesionarios= Concesionarios
 
-
+message.download= Verifica que las ventanas emergentes estén desbloqueadas para que puedas tener una navegación óptima y puedas descargar los documento
