Certificacion Pagos y Vehiculos - Ajustes en etiquetas con Ñ y cambio de etiqueta en boton para descargar factura

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3261,6 +3261,7 @@ sobre.vehiculo.liqui.tarfiactual= Tarifa
 sobre.vehiculo.liqui.anio= Año
 sobre.vehiculo.liqui.regresar= Regresar
 sobre.vehiculo.liqui.descfactura= Descargar factura vigencia actual
+sobre.vehiculo.liqui.descargapagos= Descarga para pago en bancos
 sobre.vehiculo.liqui.presdecla= Generar declaración/Corrección Vigencia actual
 
 
