--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1871,7 +1871,7 @@ thirdAutorized.title=Tercero Autorizado
 thirdAutorized.title_01=Tercero Autorizado - Juzgados
 thirdAutorized.title_02=Tercero Autorizado - Notarias /Sucesiones
 thirdAutorized.title_03=Tercero Autorizado - Notarias / Transferencia de Dominio
-thirdAutorized.title_04=Tercero Autorizado - SIM
+thirdAutorized.title_04=Tercero Autorizado - VUS
 thirdAutorized.title_05=Concesionarios
 thirdAutorized.description=Ingresa aquí si has sido autorizado por Dirección de Impuestos de Bogotá para la consulta de obligaciones pendientes.
 retainingAgent.title=Agente Retenedor
