Se agregan cambios para Retenciones practicadas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6736,3 +6736,22 @@ concesionario.inicial.pagar=Pagar
 breadcrumb.concesionarios= Concesionarios
 
 message.download= Verifica que las ventanas emergentes estén desbloqueadas para que puedas tener una navegación óptima y puedas descargar los documento
+
+#Retenciones Practicadas
+retenciones.practicadas.inicial.titulo= Retenciones practicadas
+retenciones.practicadas.inicial.anio= Año Gravable
+
+retenciones.practicadas.table.tpDoc=Tipo de Documento
+retenciones.practicadas.table.numDoc= No. Documento
+retenciones.practicadas.table.nomRete=Nombre Retenedor
+retenciones.practicadas.table.visualizar= Visualizar
+
+retenciones.practicadas.tableDet.perRepo= Periodo reportado
+retenciones.practicadas.tableDet.retenedor=Retenedor
+retenciones.practicadas.tableDet.tipDoc=Tipo Documento
+retenciones.practicadas.tableDet.idRetenedor=Identificación del retenedor
+retenciones.practicadas.tableDet.basRet=Base de retención
+retenciones.practicadas.tableDet.tarApli=Tarifa aplicada
+retenciones.practicadas.tableDet.valRet=Valores reteniddos
+retenciones.practicadas.tableDet.totPrac=Total Retenciones a Practicadas
+retenciones.practicadas.tableDet.impRepo=Imprimir reporte
