Se agregan cambios para Descarga de Factura en Menu anonimo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6735,7 +6735,7 @@ concesionario.inicial.impresion=Impresión
 concesionario.inicial.pagar=Pagar
 breadcrumb.concesionarios= Concesionarios
 
-message.download= Verifica que las ventanas emergentes estén desbloqueadas para que puedas tener una navegación óptima y puedas descargar los documento
+message.download= Verifica que las ventanas emergentes estén desbloqueadas para que puedas tener una navegación óptima y puedas descargar los documentos
 
 #Retenciones Practicadas
 retenciones.practicadas.inicial.titulo= Retenciones practicadas
