se agregan cambios para mensajes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1843,8 +1843,8 @@ register.continue=Continuar
 register.questions.title=Preguntas de Reto
 register.send=Enviar
 register.confirmEmail=Confirmar correo electrónico
-register.personalData.title=Para generar tu Usuario y Contraseña
-register.emailUser=El correo electrónico será tú usuario.
+register.personalData.title=Para registrarte, necesitas un correo electrónico personal, que será tu usuario, y una contraseña.
+register.emailUser=Por favor, verifica que el correo ingresado esté escrito correctamente para garantizar que recibas con éxito el mensaje de activación de cuenta. 
 register.passwordRequirements=La contraseña debe tener una letra mayúscula, una minúscula, un número y una longitud entre 8 y 16 caracteres
 register.activateInbox=¿Deseas activar tu Buzón Tributario?
 register.personalDataAuthorization=Autorizo uso de la anterior información para fines institucionales
