--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -6755,3 +6755,18 @@ retenciones.practicadas.tableDet.tarApli=Tarifa aplicada
 retenciones.practicadas.tableDet.valRet=Valores reteniddos
 retenciones.practicadas.tableDet.totPrac=Total Retenciones a Practicadas
 retenciones.practicadas.tableDet.impRepo=Imprimir reporte
+
+
+forgottenMail.title = Recuperar correo electrónico
+
+text.account.profile.mail = Recuperar correo electrónico
+text.account.profile.mail.description1 = Si el correo con el que realizó el registro es incorrecto o lo desea cambiar debe: 
+text.account.profile.mail.description2 =1. Ingresar a la oficina con el correo inicialmente registrado
+text.account.profile.mail.description3 =2. En MI RIT, ir a la sección: Cambiar correo electrónico/ Usuario
+text.account.profile.mail.description4 =3. Realizar la corrección del correo o actualizar a nuevo correo
+text.account.profile.mail.description5 =4. Actualizar
+text.account.profile.mail.description6 =5. Cerrar
+text.account.profile.mail.description7 =6. Volver a ingresar con el nuevo correo
+text.account.profile.mail.docType= Tipo de documento
+text.account.profile.mail.docNum = Número de documento
+text.account.profile.mail.recMail= Recuperar correo
