Descarga factura VA - cambio en etiquetas, ya no se muestra vehicular

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5687,6 +5687,17 @@ contribuyente.listaRepresentantes.name=Nombre
 contribuyente.listaRepresentantes.as=En calidad de
 contribuyente.listaRepresentantes.refentTo=Relacionado con
 
+descargaFacturaVA.descarga.titulo=Aquí puedes descargar tu factura Predial de la Vigencia Actual
+descargaFacturaVA.descarga.subtitulo=Descargar Factura
+descargaFacturaVA.descarga.campo.impuesto=Impuesto
+descargaFacturaVA.descarga.campo.tipoDocumento=Tipo de Documento
+descargaFacturaVA.descarga.campo.numeroDocumento=Número de documento
+descargaFacturaVA.descarga.opcionImpuesto0=Seleccionar
+descargaFacturaVA.descarga.opcionImpuesto1=Predial
+descargaFacturaVA.descarga.etiqueta.opcionImpuesto0=CHIP
+descargaFacturaVA.descarga.etiqueta.opcionImpuesto1=CHIP
+descargaFacturaVA.descarga.etiqueta.opcionImpuesto2=Placa
+
 
 vehiculos.detalle.blindado.=-
 vehiculos.detalle.marca.=-
