Setting funcionario functionality

--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -72,6 +72,7 @@ type.Gender.MALE.name=Male
 type.Gender.FEMALE.name=Female
 
 type.Customer.documentNumber.name=Document Number
+type.Customer.esFuncionario.name=Es Funcionario
 type.Customer.documentType.name=Document Type
 type.Customer.firstName.name=First Name
 type.Customer.middleName.name=Middle Name
