--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -76,6 +76,7 @@ type.Customer.documentType.name=Tipo de Documento
 type.Customer.firstName.name=Primer Nombre
 type.Customer.middleName.name=Segundo Nombre
 type.Customer.lastName.name=Primer Apellido
+type.Customer.esFuncionario.name=Es Funcionario
 type.Customer.secondLastName.name=Segundo Apellido
 type.Customer.documentExpeditionDate.name=Fecha de Expedición del Documento
 type.Customer.sex.name=Sexo
