Facturacion - Mensaje ahora dice: Aquí puedes descargar tu factura Predial y de Vehículos 2022. Para vigencias anteriores, ingresa a la Oficina Virtual.

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -5687,7 +5687,7 @@ contribuyente.listaRepresentantes.name=Nombre
 contribuyente.listaRepresentantes.as=En calidad de
 contribuyente.listaRepresentantes.refentTo=Relacionado con
 
-descargaFacturaVA.descarga.titulo=Aquí puedes descargar tu factura Predial de la Vigencia Actual
+descargaFacturaVA.descarga.titulo=Aquí puedes descargar tu factura Predial y de Vehículos 2022. Para vigencias anteriores, ingresa a la Oficina Virtual.
 descargaFacturaVA.descarga.subtitulo=Descargar Factura
 descargaFacturaVA.descarga.campo.impuesto=Impuesto
 descargaFacturaVA.descarga.campo.tipoDocumento=Tipo de Documento
